[project]
name = "mediassist-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.2",
    "groq>=0.37.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.49.0",
]
